# mcp-resilient-research

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
resilient_research/: __init__.py  config.py  server.py
resilient_research/database/: connection.py  repository.py  schema.py
resilient_research/graph/: builder.py  edges.py  state.py
resilient_research/graph/nodes/: __init__.py  apply_constraints.py  assess_relevance.py  check_completion.py  extract_metadata.py  generate_queries.py  handle_error.py  log_discard.py  pick_next_url.py  save_artifact.py  score_authority.py  scrape_url.py  search_web.py
resilient_research/resources/: knowledge_graph.py
resilient_research/services/: evaluator.py  resilience.py  scraper.py
resilient_research/services/search/: __init__.py  base.py  brave.py  duckduckgo.py  router.py  serpapi.py
resilient_research/tools/: get_discarded.py  get_status.py  start_research.py
tests/: conftest.py  test_database.py  test_evaluator.py  test_graph.py  test_tools.py
