[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-resilient-research"
version = "0.1.0"
description = "Resilient, evaluated research MCP server for HistorIA"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sebastián Claudio Troccoli", email = "" }]
keywords = ["mcp", "langgraph", "research", "ai", "llm", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "litellm>=1.40",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20",
    "duckduckgo-search>=6.0",
    "python-dotenv>=1.0",
]

[project.urls]
Repository = "https://github.com/stroccoli/mcp-resilient-research"
Issues = "https://github.com/stroccoli/mcp-resilient-research/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
resilient-research = "resilient_research.server:main"

[tool.hatch.build.targets.wheel]
packages = ["resilient_research"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
